CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(Networking)

FILE(GLOB NETWORKING_EXTERNAL_SOURCES
)

SET(NETWORKING_SOURCES
	Source/stdafx.h
	Source/stdafx.cpp
)

INCLUDE_DIRECTORIES("${NETWORKING_SOURCE_DIR}/Source")

ADD_LIBRARY(Networking STATIC ${NETWORKING_SOURCES} ${NETWORKING_EXTERNAL_SOURCES})

SET(CMAKE_INCLUDE_CURRENT_DIR ON)